[package]
name = "nude_detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24" }
tract-onnx = { version = "0.21.1" }
ndarray-stats = { version = "0.5.1" }
opencv = { version = "0.88.8", default-features = false, features = ["dnn"] }
anyhow = { version = "1.0.79" }
